[gd_scene load_steps=7 format=2]

[ext_resource path="res://Inconsolata-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Pictures/binoculars.jpg" type="Texture" id=2]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/OpeningScene.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )
mainGameScene = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1026.0
margin_bottom = 601.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 100
custom_constants/margin_top = 300
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 300.0
margin_right = 924.0
margin_bottom = 564.0

[node name="Binoculars" type="Sprite" parent="MarginContainer/VBoxContainer"]
position = Vector2( 412, -140 )
scale = Vector2( 1.01503, 0.856394 )
texture = ExtResource( 2 )

[node name="Game Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.0745098, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Surveillance"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 824.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( -620, -93 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_left = 300

[node name="Start Game Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 300.0
margin_right = 524.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 824.0
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_left = 300

[node name="Controls Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer3"]
margin_left = 300.0
margin_right = 524.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Controls"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 215.0
margin_right = 824.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_left = 300

[node name="Credits Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer4"]
margin_left = 300.0
margin_right = 524.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Credits"

[connection signal="button_up" from="MarginContainer/VBoxContainer/MarginContainer2/Start Game Button" to="." method="_on_Start_Game_Button_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/Start Game Button" to="." method="_on_Start_Game_Button_pressed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/MarginContainer3/Controls Button" to="." method="_on_Controls_Button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/MarginContainer4/Credits Button" to="." method="_on_Credits_Button_button_up"]
